--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
+  <meta charset="utf-8"/>
   <title>SkyWay</title>
   <script src="https://skyway.io/dist/0.3/peer.js"></script>
   <script src="load.js"></script>
   <script src="main.js"></script>
 </head>
+<body>
+<h1>SkyWay Sandbox</h1>
+<button id="peer-connect">Connect!!</button><br>
+<div class="chat">
+  <div id="chat-display">
+  </div>
+  <input type="text" id="chat-message"/>
+  <button id="chat-send">Send Message</button>
+</div>
+</body>
 </html>
