--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <title>SkyWay</title>
-  <script src="https://skyway.io/dist/0.3/peer.js"></script>
-  <script src="load.js"></script>
-  <script src="main.js"></script>
+  <link rel="stylesheet" href="main.css" type="text/css">
 </head>
 <body>
 <h1>SkyWay Sandbox</h1>
@@ -17,4 +15,7 @@
   <button id="chat-send">Send Message</button>
 </div>
 </body>
+<script src="https://skyway.io/dist/0.3/peer.js"></script>
+<script src="load.js"></script>
+<script src="main.js"></script>
 </html>
