Use iframe to mimic two client by one page

--- a/index.html
+++ b/index.html
@@ -5,17 +5,8 @@
   <title>SkyWay</title>
   <link rel="stylesheet" href="main.css" type="text/css">
 </head>
-<body>
-<h1>SkyWay Sandbox</h1>
-<button id="peer-connect">Connect!!</button><br>
-<div class="chat">
-  <div id="chat-display">
-  </div>
-  <input type="text" id="chat-message"/>
-  <button id="chat-send">Send Message</button>
-</div>
-</body>
-<script src="https://skyway.io/dist/0.3/peer.js"></script>
-<script src="load.js"></script>
-<script src="main.js"></script>
+<body style="width: 99%;">
+<h1>Sandbox A</h1>
+<iframe style="width: 45%; float:left;  margin: 0 2%; height: 500px;" src="chat.html"></iframe>
+<iframe style="width: 45%; float:right; margin: 0 2%; height: 500px;" src="chat.html"></iframe>
 </html>
