--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8"/>
   <title>SkyWay</title>
-  <link rel="stylesheet" href="main.css" type="text/css">
+  <link rel="stylesheet" href="chat.css" type="text/css">
 </head>
 <body style="width: 99%;">
-<h1>Sandbox A</h1>
+<h1>Sandbox Provider</h1>
 <iframe style="width: 45%; float:left;  margin: 0 2%; height: 500px;" src="chat.html"></iframe>
 <iframe style="width: 45%; float:right; margin: 0 2%; height: 500px;" src="chat.html"></iframe>
 </html>
